--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,27 +24,27 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
 	
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/icomoon.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/bootstrap.css">
 
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/magnific-popup.css">
 
 	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/owl.theme.default.min.css">
 
 	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/style.css">
 
 	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
+	<script src="${request.contextPath}/js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
+	<script src="${request.contextPath}/js/respond.min.js"></script>
 	<![endif]-->
 
 	</head>
@@ -82,7 +82,7 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="height: 700px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+		<section id="home" class="video-hero" style="height: 700px; background-image: url(${request.contextPath}/images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 		<div class="overlay"></div>
 			<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=vqqt5p0q-eU',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a> 
 			<div class="display-t text-center">
@@ -107,21 +107,21 @@
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_1.jpg" alt="">
+									<img class="img-responsive" src="${request.contextPath}/images/dashboard_full_1.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_2.jpg" alt="">
+									<img class="img-responsive" src="${request.contextPath}/images/dashboard_full_2.jpg" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_3.jpg" alt="">
+									<img class="img-responsive" src="${request.contextPath}/images/dashboard_full_3.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -190,7 +190,7 @@
 			<div class="container">
 				<div class="row mobile-wrap">
 					<div class="col-md-5 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-2.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(${request.contextPath}/images/mobile-2.jpg);"></div>
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
@@ -219,7 +219,7 @@
 				</div>
 				<div class="row mobile-wrap">
 					<div class="col-md-5 col-md-push-7 animate-box">
-						<div class="mobile-img" style="background-image: url(images/mobile-1.jpg);"></div>
+						<div class="mobile-img" style="background-image: url(${request.contextPath}/images/mobile-1.jpg);"></div>
 					</div>
 					<div class="col-md-7 col-md-pull-5 animate-box">
 						<div class="desc">
@@ -249,7 +249,7 @@
 			</div>
 		</div>
 
-		<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_img_1.jpg);" data-stellar-background-ratio="0.5">
+		<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(${request.contextPath}/images/cover_img_1.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -300,7 +300,7 @@
 							<h2>Building the Mention Sales Application on Unapp</h2>
 							<p class="admin"><span>May 12, 2018</span></p>
 							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person1.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
+							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(${request.contextPath}/images/person1.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
 						</article>
 					</div>
 					<div class="col-md-4 animate-box">
@@ -308,7 +308,7 @@
 							<h2>Building the Mention Sales Application on Unapp</h2>
 							<p class="admin"><span>May 12, 2018</span></p>
 							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person2.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
+							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(${request.contextPath}/images/person2.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
 						</article>
 					</div>
 					<div class="col-md-4 animate-box">
@@ -316,14 +316,14 @@
 							<h2>Building the Mention Sales Application on Unapp</h2>
 							<p class="admin"><span>May 12, 2018</span></p>
 							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person3.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
+							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(${request.contextPath}/images/person3.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
 						</article>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="colorlib-subscribe" class="colorlib-subscribe" style="background-image: url(images/cover_img_1.jpg);" data-stellar-background-ratio="0.5">
+		<div id="colorlib-subscribe" class="colorlib-subscribe" style="background-image: url(${request.contextPath}/images/cover_img_1.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -432,7 +432,7 @@
 					<div class="col-md-3 colorlib-widget">
 						<h4>Recent Blog</h4>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-1.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(${request.contextPath}/images/blog-1.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Photoshoot Technique</a></h2>
@@ -440,7 +440,7 @@
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-2.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(${request.contextPath}/images/blog-2.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Camera Lens Shoot</a></h2>
@@ -448,7 +448,7 @@
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(${request.contextPath}/images/blog-3.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Imahe the biggest photography studio</a></h2>
@@ -490,26 +490,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</div>
 	
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="${request.contextPath}/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="${request.contextPath}/js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="${request.contextPath}/js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="${request.contextPath}/js/jquery.waypoints.min.js"></script>
 	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
+	<script src="${request.contextPath}/js/jquery.stellar.min.js"></script>
 	<!-- YTPlayer -->
-	<script src="js/jquery.mb.YTPlayer.min.js"></script>
+	<script src="${request.contextPath}/js/jquery.mb.YTPlayer.min.js"></script>
 	<!-- Owl carousel -->
-	<script src="js/owl.carousel.min.js"></script>
+	<script src="${request.contextPath}/js/owl.carousel.min.js"></script>
 	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
+	<script src="${request.contextPath}/js/jquery.magnific-popup.min.js"></script>
+	<script src="${request.contextPath}/js/magnific-popup-options.js"></script>
 	<!-- Counters -->
-	<script src="js/jquery.countTo.js"></script>
+	<script src="${request.contextPath}/js/jquery.countTo.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
+	<script src="${request.contextPath}/js/main.js"></script>
 
 	</body>
 </html>
