--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">Unapp</a></div>
+							<div id="colorlib-logo"><a href="index.html">TWChat</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
@@ -90,9 +90,9 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Take on your biggest projects and goals</h2>
-								<p>with Unapp's high quality features</p>
-								<p><a href="gallery.html" class="btn btn-primary btn-lg btn-custom">Get premium</a></p>
+								<h2>人生若只如初见，何事秋风悲画扇。</h2>
+								<p>TWChat 即将见面</p>
+								<p><a href="https://my.oschina.net/mrpei123" class="btn btn-primary btn-lg btn-custom">开始遇见</a></p>
 							</div>
 						</div>
 					</div>
