--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -146,7 +146,7 @@
 								<i class="icon-browser"></i>
 							</span>
                         <div class="desc">
-                            <h3>Create your own template</h3>
+                            <h3>自由的定义您的专属信息</h3>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                                 there live the blind texts.</p>
                         </div>
@@ -158,7 +158,7 @@
 								<i class="icon-download"></i>
 							</span>
                         <div class="desc">
-                            <h3>Automatic Backup Data</h3>
+                            <h3>安全可靠的数据服务</h3>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                                 there live the blind texts.</p>
                         </div>
@@ -373,8 +373,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 text-center colorlib-heading animate-box">
-                    <h2>Already trusted by over 10,000 users</h2>
-                    <p>Subscribe to receive unapp tips from instructors right to your inbox.</p>
+                    <h2>超过 10,000 用户参与内测</h2>
+                    <p>填写您的信息来订阅我们最新动态.</p>
                 </div>
             </div>
             <div class="row animate-box">
@@ -390,7 +390,7 @@
                                 </div>
                                 <div class="col-one-third">
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">Subscribe Now</button>
+                                        <button type="submit" class="btn btn-primary">订阅</button>
                                     </div>
                                 </div>
                             </form>
