--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -170,7 +170,7 @@
 								<i class="icon-layers"></i>
 							</span>
                         <div class="desc">
-                            <h3>Page Builder</h3>
+                            <h3>简约清爽的交互风格</h3>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                                 there live the blind texts.</p>
                         </div>
