--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,11 +70,11 @@
                                     <li><a href="work-grid-without-text.html">Works grid w/o text</a></li>
                                 </ul>
                             </li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="shop.html">Shop</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+<!--                            <li><a href="services.html">Services</a></li>-->
+<!--                            <li><a href="blog.html">Blog</a></li>-->
+<!--                            <li><a href="about.html">About</a></li>-->
+<!--                            <li><a href="shop.html">Shop</a></li>-->
+<!--                            <li><a href="contact.html">Contact</a></li>-->
                         </ul>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="item">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="featured-entry">
-                                <img class="img-responsive" src="${request.contextPath}/images/dashboard_full_1.jpg"
+                                <img class="img-responsive" src="${request.contextPath}/images/dashboard_full_chat.png"
                                      alt="">
                             </div>
                         </div>
@@ -184,280 +184,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-                    <h2>Collaborate with your design team in a new way</h2>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                        unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
-                        decided to leave for the far World of Grammar.</p>
+                    <h2>曾经的故事</h2>
+                    <p>你知道吗？这些年，北京还是老样子，到处都在拆呀建呀的。
+                        每次经过你出事的地方，我都会停下来，不过心里倒很平静，因为总觉得你根本就没有走。</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 animate-box">
-                    <span class="play"><a href="https://vimeo.com/channels/staffpicks/93951774"
+                    <span class="play"><a href="http://sh.yinyuetai.com/uploads/videos/common/536C01631936638CE56CEE783BD8CE12.mp4"
                                           class="pulse popup-vimeo"><i class="icon-play3"></i></a></span>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="colorlib-work-featured colorlib-bg-white">
-        <div class="container">
-            <div class="row mobile-wrap">
-                <div class="col-md-5 animate-box">
-                    <div class="mobile-img"
-                         style="background-image: url(${request.contextPath}/images/mobile-2.jpg);"></div>
-                </div>
-                <div class="col-md-7 animate-box">
-                    <div class="desc">
-                        <h2>Real template creation</h2>
-                        <div class="features">
-                            <span class="icon"><i class="icon-lightbulb"></i></span>
-                            <div class="f-desc">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text by the name of Lorem
-                                    Ipsum decided to leave for the far World of Grammar.</p>
-                            </div>
-                        </div>
-                        <div class="features">
-                            <span class="icon"><i class="icon-circle-compass"></i></span>
-                            <div class="f-desc">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text by the name</p>
-                            </div>
-                        </div>
-                        <div class="features">
-                            <span class="icon"><i class="icon-beaker"></i></span>
-                            <div class="f-desc">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text by the name of Lorem
-                                    Ipsum decided to leave for the far World of Grammar.</p>
-                            </div>
-                        </div>
-                        <p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i
-                                class="icon-arrow-right3"></i></a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="row mobile-wrap">
-                <div class="col-md-5 col-md-push-7 animate-box">
-                    <div class="mobile-img"
-                         style="background-image: url(${request.contextPath}/images/mobile-1.jpg);"></div>
-                </div>
-                <div class="col-md-7 col-md-pull-5 animate-box">
-                    <div class="desc">
-                        <h2>Finish template creation</h2>
-                        <div class="features">
-                            <span class="icon"><i class="icon-lightbulb"></i></span>
-                            <div class="f-desc">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text by the name of Lorem
-                                    Ipsum decided to leave for the far World of Grammar.</p>
-                            </div>
-                        </div>
-                        <div class="features">
-                            <span class="icon"><i class="icon-circle-compass"></i></span>
-                            <div class="f-desc">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text by the name</p>
-                            </div>
-                        </div>
-                        <div class="features">
-                            <span class="icon"><i class="icon-beaker"></i></span>
-                            <div class="f-desc">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text by the name of Lorem
-                                    Ipsum decided to leave for the far World of Grammar.</p>
-                            </div>
-                        </div>
-                        <p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i
-                                class="icon-arrow-right3"></i></a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div id="colorlib-counter" class="colorlib-counters"
-         style="background-image: url(${request.contextPath}/images/cover_img_1.jpg);"
-         data-stellar-background-ratio="0.5">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-4 col-sm-4 text-center animate-box">
-                        <div class="counter-entry">
-                            <span class="icon"><i class="flaticon-ribbon"></i></span>
-                            <div class="desc">
-                                <span class="colorlib-counter js-counter" data-from="0" data-to="1500" data-speed="5000"
-                                      data-refresh-interval="50"></span>
-                                <span class="colorlib-counter-label">Of customers are satisfied with our professional support</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 text-center animate-box">
-                        <div class="counter-entry">
-                            <span class="icon"><i class="flaticon-church"></i></span>
-                            <div class="desc">
-                                <span class="colorlib-counter js-counter" data-from="0" data-to="500" data-speed="5000"
-                                      data-refresh-interval="50"></span>
-                                <span class="colorlib-counter-label">Amazing preset options to be mixed and combined</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 text-center animate-box">
-                        <div class="counter-entry">
-                            <span class="icon"><i class="flaticon-dove"></i></span>
-                            <div class="desc">
-                                <span class="colorlib-counter js-counter" data-from="0" data-to="1200" data-speed="5000"
-                                      data-refresh-interval="50"></span>
-                                <span class="colorlib-counter-label">Average response time on live chat support channel</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="colorlib-blog">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-                    <h2>News from our Blog</h2>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                        unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
-                        decided to leave for the far World of Grammar.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 animate-box">
-                    <article>
-                        <h2>Building the Mention Sales Application on Unapp</h2>
-                        <p class="admin"><span>May 12, 2018</span></p>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                            unorthographic life</p>
-                        <p class="author-wrap"><a href="#" class="author-img"
-                                                  style="background-image: url(${request.contextPath}/images/person1.jpg);"></a>
-                            <a href="#" class="author">by Dave Miller</a></p>
-                    </article>
-                </div>
-                <div class="col-md-4 animate-box">
-                    <article>
-                        <h2>Building the Mention Sales Application on Unapp</h2>
-                        <p class="admin"><span>May 12, 2018</span></p>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                            unorthographic life</p>
-                        <p class="author-wrap"><a href="#" class="author-img"
-                                                  style="background-image: url(${request.contextPath}/images/person2.jpg);"></a>
-                            <a href="#" class="author">by Dave Miller</a></p>
-                    </article>
-                </div>
-                <div class="col-md-4 animate-box">
-                    <article>
-                        <h2>Building the Mention Sales Application on Unapp</h2>
-                        <p class="admin"><span>May 12, 2018</span></p>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                            unorthographic life</p>
-                        <p class="author-wrap"><a href="#" class="author-img"
-                                                  style="background-image: url(${request.contextPath}/images/person3.jpg);"></a>
-                            <a href="#" class="author">by Dave Miller</a></p>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="colorlib-subscribe" class="colorlib-subscribe"
-         style="background-image: url(${request.contextPath}/images/cover_img_1.jpg);"
-         data-stellar-background-ratio="0.5">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1 text-center colorlib-heading animate-box">
-                    <h2>超过 10,000 用户参与内测</h2>
-                    <p>填写您的信息来订阅我们最新动态.</p>
-                </div>
-            </div>
-            <div class="row animate-box">
-                <div class="col-md-6 col-md-offset-3">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form class="form-inline qbstp-header-subscribe">
-                                <div class="col-three-forth">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="email"
-                                               placeholder="Enter your email">
-                                    </div>
-                                </div>
-                                <div class="col-one-third">
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">订阅</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="colorlib-pricing">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-                    <h2>Pricing</h2>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                        unorthographic life One day however a small line of blind text by the name</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 text-center animate-box">
-                    <div class="pricing">
-                        <h2 class="pricing-heading">Starter</h2>
-                        <div class="price"><sup class="currency">$</sup>9
-                            <small>per month</small>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
-                        <p><a href="#" class="btn btn-primary">Select Plan</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3 text-center animate-box">
-                    <div class="pricing">
-                        <h2 class="pricing-heading">Basic</h2>
-                        <div class="price"><sup class="currency">$</sup>27
-                            <small>per month</small>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
-                        <p><a href="#" class="btn btn-primary">Select Plan</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3 text-center animate-box">
-                    <div class="pricing">
-                        <h2 class="pricing-heading">Pro</h2>
-                        <div class="price"><sup class="currency">$</sup>74
-                            <small>per month</small>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
-                        <p><a href="#" class="btn btn-primary">Select Plan</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3 text-center animate-box">
-                    <div class="pricing">
-                        <h2 class="pricing-heading">Unlimited</h2>
-                        <div class="price"><sup class="currency">$</sup>140
-                            <small>per month</small>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
-                        <p><a href="#" class="btn btn-primary">Select Plan</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer id="colorlib-footer">
         <div class="container">
